@@ -333,6 +333,12 @@ void GBASwi16(struct ARMCore* cpu, int immediate) {
 	mLOG(GBA_BIOS, DEBUG, "SWI: %02X r0: %08X r1: %08X r2: %08X r3: %08X",
 	    immediate, cpu->gprs[0], cpu->gprs[1], cpu->gprs[2], cpu->gprs[3]);
 
+	switch (immediate) {
+	case 0xFA:
+		GBAPrintFlush(gba);
+		return;
+	}
+
 	if (gba->memory.fullBios) {
 		ARMRaiseSWI(cpu);
 		return;
