@@ -10,6 +10,7 @@ Features:
  - Map viewer
  - Automatic cheat loading and saving
  - GameShark and Action Replay button support
+ - AGBPrint support
 Bugfixes:
  - GB Audio: Make audio unsigned with bias (fixes mgba.io/i/749)
  - GB Serialize: Fix audio state loading
